df-derive/tests/fail/122-fail-as-str-on-tuple.stderr
error: field `pair` has `as_str` but its type is a tuple; field-level attributes do not apply to multi-column tuple fields. Hoist the tuple into a named struct that derives `ToDataFrame` if you need per-element attributes.
 --> tests/fail/122-fail-as-str-on-tuple.rs:7:17
  |
7 |     #[df_derive(as_str)]
  |                 ^^^^^^
